--- a/index.html
+++ b/index.html
@@ -11,17 +11,45 @@
       <div class="header-left">
         <span class="uber-logo">Uber</span>
         <nav class="main-nav">
-          <a href="https://m.uber.com/go/home?marketing_vistor_id=7026a3e4-934f-4296-885e-8495c8ca1c0e&uclick_id=df0ef638-4b8b-46ac-bf02-8d38cb7c5dc0">Ride</a>
-          <a href="https://auth.uber.com/v2/?breeze_init_req_id=bde03e49-3c21-45ca-a546-2ccbb8b7658e&breeze_local_zone=phx8&next_url=https%3A%2F%2Fdrivers.uber.com%2F%3Fmarketing_vistor_id%3D7026a3e4-934f-4296-885e-8495c8ca1c0e%26uclick_id%3Ddf0ef638-4b8b-46ac-bf02-8d38cb7c5dc0&sm_flow_id=zcMOJpD2&state=oiOTSSekmxLtB-p5MOmbLo_6UFJPmtk_f_YAo2RXfnM%3D">Drive</a>
-          <a href="https://www.uber.com/in/en/business/?uclick_id=df0ef638-4b8b-46ac-bf02-8d38cb7c5dc0">Business</a>
-          <a href="https://www.ubereats.com/?uclick_id=df0ef638-4b8b-46ac-bf02-8d38cb7c5dc0&marketing_vistor_id=7026a3e4-934f-4296-885e-8495c8ca1c0e">Uber Eats</a>
-          <a href="https://www.uber.com/in/en/about/?uclick_id=df0ef638-4b8b-46ac-bf02-8d38cb7c5dc0">About Us</a>
+          <a
+            href="https://m.uber.com/go/home?marketing_vistor_id=7026a3e4-934f-4296-885e-8495c8ca1c0e&uclick_id=df0ef638-4b8b-46ac-bf02-8d38cb7c5dc0"
+            >Ride</a
+          >
+          <a
+            href="https://auth.uber.com/v2/?breeze_init_req_id=bde03e49-3c21-45ca-a546-2ccbb8b7658e&breeze_local_zone=phx8&next_url=https%3A%2F%2Fdrivers.uber.com%2F%3Fmarketing_vistor_id%3D7026a3e4-934f-4296-885e-8495c8ca1c0e%26uclick_id%3Ddf0ef638-4b8b-46ac-bf02-8d38cb7c5dc0&sm_flow_id=zcMOJpD2&state=oiOTSSekmxLtB-p5MOmbLo_6UFJPmtk_f_YAo2RXfnM%3D"
+            >Drive</a
+          >
+          <a
+            href="https://www.uber.com/in/en/business/?uclick_id=df0ef638-4b8b-46ac-bf02-8d38cb7c5dc0"
+            >Business</a
+          >
+          <a
+            href="https://www.ubereats.com/?uclick_id=df0ef638-4b8b-46ac-bf02-8d38cb7c5dc0&marketing_vistor_id=7026a3e4-934f-4296-885e-8495c8ca1c0e"
+            >Uber Eats</a
+          >
+          <a
+            href="https://www.uber.com/in/en/about/?uclick_id=df0ef638-4b8b-46ac-bf02-8d38cb7c5dc0"
+            >About Us</a
+          >
         </nav>
       </div>
-      <div class="header-right"> 
-        <a href="https://help.uber.com/?uclick_id=df0ef638-4b8b-46ac-bf02-8d38cb7c5dc0" class="header-link">Help</a>
-        <a href="https://auth.uber.com/v2?marketing_vistor_id=7026a3e4-934f-4296-885e-8495c8ca1c0e&next_url=https%3A%2F%2Fwww.uber.com&uclick_id=df0ef638-4b8b-46ac-bf02-8d38cb7c5dc0" class="header-link">Log in</a>
-        <a href="https://auth.uber.com/v2?marketing_vistor_id=7026a3e4-934f-4296-885e-8495c8ca1c0e&next_url=https%3A%2F%2Fwww.uber.com&uclick_id=df0ef638-4b8b-46ac-bf02-8d38cb7c5dc0" button class="signup-btn">Sign up</a>
+      <div class="header-right">
+        <a
+          href="https://help.uber.com/?uclick_id=df0ef638-4b8b-46ac-bf02-8d38cb7c5dc0"
+          class="header-link"
+          >Help</a
+        >
+        <a
+          href="https://auth.uber.com/v2?marketing_vistor_id=7026a3e4-934f-4296-885e-8495c8ca1c0e&next_url=https%3A%2F%2Fwww.uber.com&uclick_id=df0ef638-4b8b-46ac-bf02-8d38cb7c5dc0"
+          class="header-link"
+          >Log in</a
+        >
+        <a
+          href="https://auth.uber.com/v2?marketing_vistor_id=7026a3e4-934f-4296-885e-8495c8ca1c0e&next_url=https%3A%2F%2Fwww.uber.com&uclick_id=df0ef638-4b8b-46ac-bf02-8d38cb7c5dc0"
+          button
+          class="signup-btn"
+          >Sign up</a
+        >
       </div>
     </header>
 
